--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,7 +6,7 @@
     z-index: 100;
     top: 0;
     padding: 1em 2em;
-    background-color: rgb(0, 0, 0);
+    background: rgb(0, 0, 0);
     color: white;
 }
 
@@ -40,4 +40,20 @@
 .nav-right a:active {
     background: lightgray;
     color: white;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    .nav-right {
+        width: 100%;
+        justify-content: center;
+    }
+
+    .name {
+        font-size: 1.7em;
+    }
 }
